fix(atto): ToC vertical overflow

--- a/css/atto.css
+++ b/css/atto.css
@@ -1286,6 +1286,8 @@ nav[role="tree"] li {
 		left: calc(var(--size) * -1);
 		display: inline-block;
 		margin-top: 2rem;
+		height: calc(100vh - 2rem);
+		overflow-y: auto;
 	}
 
 	main>aside>nav[role="tree"] li:has(a[aria-current="step"]) {
